--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,7 @@
 <strong (click)="handleClick()">{{ productData?.name }}</strong>
 <img [src]="productData?.image" />
-<p>{{ productData?.description }}</p>
+<strong>{{ productData?.price }} EUR</strong>
+<p>
+  {{ productData?.description }}
+  <img src="" alt="" />
+</p>
