--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,3 +1,12 @@
-img {
+:host {
+  display: inline-block;
+  margin: 20px;
+  padding: 20px;
   max-width: 100px;
+  min-height: 250px;
+  vertical-align: top;
+
+  img {
+    max-width: 100px;
+  }
 }
