--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,12 +1,11 @@
 :host {
   display: inline-block;
   margin: 20px;
-  padding: 20px;
-  max-width: 100px;
+  max-width: 150px;
   min-height: 250px;
   vertical-align: top;
 
   img {
-    max-width: 100px;
+    width: 100%;
   }
 }
