--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,26 +2,7 @@
   <h1>Bienvenue chez {{ "Explore" | uppercase }}</h1>
 </mat-toolbar>
 
-<div>
-  <input placeholder="Search..." type="text" [(ngModel)]="searchString" />
-</div>
+<a routerLink="/">Shop</a> <br />
+<a routerLink="/product-create">Create Product</a>
 
-<explore-product
-  *ngFor="
-    let product of productDatas | search: searchString;
-    let i = index;
-    let odd = odd
-  "
-  [productData]="product"
-  (addToCart)="handleAddToCart($event)"
-  [ngStyle]="{
-    backgroundColor: i % 2 ? '' : 'silver'
-  }"
-  [style.border]="odd ? 'solid 1px black' : ''"
-  [exploreFocus]="product.price | vat"
-  exploreFocus.color="gold"
-></explore-product>
-
-<pre>
-  {{ productDatas | json }}
-</pre>
+<router-outlet></router-outlet>
