rxjs operators and async pipe

--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,1 +1,3 @@
-<explore-product [productData]="productData"></explore-product>
+<explore-product
+  [productData]="(productData$ | async) || undefined"
+></explore-product>
