template driven form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 </mat-toolbar>
 
 <a routerLink="/">Shop</a> <br />
-<a routerLink="/product-create">Create Product</a>
+<a routerLink="/product-create">Create Product</a><br />
+<a routerLink="/login">Login</a>
 
 <router-outlet></router-outlet>
