--- a/src/app/components/product-create/product-create.component.html
+++ b/src/app/components/product-create/product-create.component.html
@@ -1,1 +1,22 @@
-<p>product-create works!</p>
+<h1>Create Product</h1>
+
+<form>
+  <label>
+    Name
+    <input type="text" placeholder="Name" />
+  </label>
+  <label>
+    Description
+    <input type="text" placeholder="Description" />
+  </label>
+  <label>
+    Image URL
+    <input type="text" placeholder="Image URL" />
+  </label>
+  <label>
+    Price
+    <input type="number" placeholder="Price" />
+  </label>
+
+  <button type="submit">Create</button>
+</form>
