--- a/src/app/components/product-create/product-create.component.scss
+++ b/src/app/components/product-create/product-create.component.scss
@@ -6,6 +6,10 @@
     label {
       display: block;
       margin: 10px 0;
+
+      input.ng-invalid.ng-touched {
+        border: solid 2px red;
+      }
     }
   }
 }
