--- a/src/app/components/product-create/product-create.component.html
+++ b/src/app/components/product-create/product-create.component.html
@@ -1,22 +1,28 @@
 <h1>Create Product</h1>
 
-<form>
+<form [formGroup]="productDataForm" (submit)="handleSubmit()">
   <label>
     Name
-    <input type="text" placeholder="Name" />
+    <input type="text" formControlName="name" />
+    {{
+      productDataForm.controls["name"].touched &&
+      productDataForm.controls["name"].hasError("required")
+        ? "Ce champ est requis"
+        : ""
+    }}
   </label>
   <label>
     Description
-    <input type="text" placeholder="Description" />
+    <input type="text" formControlName="description" />
   </label>
   <label>
     Image URL
-    <input type="text" placeholder="Image URL" />
+    <input type="text" formControlName="image" />
   </label>
   <label>
     Price
-    <input type="number" placeholder="Price" />
+    <input type="number" formControlName="price" />
   </label>
 
-  <button type="submit">Create</button>
+  <button type="submit" [disabled]="productDataForm.invalid">Create</button>
 </form>
